test/expected/regression-http-close.txt
/scripts/regression-http-close.js:21
        throw new Error('trace');
        ^

Error: trace
    at Server.close (/scripts/regression-http-close.js:21:15)
    at Server.g (events.js:260:16)
    at emitNone (events.js:67:13)
    at Server.emit (events.js:166:7)
    at emitCloseNT (net.js:1518:8)
    at doNTCallback1 (node.js:428:9)
    at process._tickCallback (node.js:350:17)
    at Server._emitCloseIfDrained (net.js:1512:11)
    at Server.close (net.js:1496:10)
    at IncomingMessage.end (/scripts/regression-http-close.js:20:14)
    at IncomingMessage.g (events.js:260:16)
    at emitNone (events.js:72:20)
    at IncomingMessage.emit (events.js:166:7)
    at endReadableNT (_stream_readable.js:893:12)
    at doNTCallback2 (node.js:439:9)
    at process._tickCallback (node.js:353:17)
    at endReadable (_stream_readable.js:884:13)
    at IncomingMessage.Readable.read (_stream_readable.js:357:5)
    at flow (_stream_readable.js:733:26)
    at resume_ (_stream_readable.js:713:3)
    at doNTCallback2 (node.js:439:9)
    at process._tickCallback (node.js:353:17)
    at resume (_stream_readable.js:701:13)
    at IncomingMessage.Readable.resume (_stream_readable.js:693:5)
    at IncomingMessage.Readable.on (_stream_readable.js:660:10)
    at ClientRequest.get (/scripts/regression-http-close.js:17:9)
    at ClientRequest.g (events.js:260:16)
    at emitOne (events.js:77:13)
    at ClientRequest.emit (events.js:169:7)
    at HTTPParser.parserOnIncomingClient (_http_client.js:418:21)
    at HTTPParser.parserOnHeadersComplete (_http_common.js:88:23)
    at Socket.socketOnData (_http_client.js:308:20)
    at emitOne (events.js:77:13)
    at Socket.emit (events.js:169:7)
    at readableAddChunk (_stream_readable.js:146:16)
    at Socket.Readable.push (_stream_readable.js:110:10)
    at TCP.onread (net.js:523:20)
    at Socket.connect (net.js:884:40)
    at Agent.exports.connect.exports.createConnection (net.js:63:35)
    at Agent.createSocket (_http_agent.js:174:16)
    at Agent.addRequest (_http_agent.js:143:23)
    at new ClientRequest (_http_client.js:136:16)
    at Object.exports.request (http.js:31:10)
    at Object.exports.get (http.js:35:21)
    at Server.listen (/scripts/regression-http-close.js:16:8)
    at Server.g (events.js:260:16)
    at emitNone (events.js:67:13)
    at Server.emit (events.js:166:7)
    at emitListeningNT (net.js:1257:10)
    at doNTCallback1 (node.js:428:9)
    at process._tickCallback (node.js:350:17)
    at Server._listen2 (net.js:1245:11)
    at listen (net.js:1267:10)
    at net.js:1376:9
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:63:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:82:10)
    at Object.lookup (dns.js:165:19)
    at listenAfterLookup (net.js:1371:20)
    at Server.listen (net.js:1367:5)
    at Object.<anonymous> (/scripts/regression-http-close.js:12:4)
    at Module._compile (module.js:425:26)
    at Object.Module._extensions..js (module.js:432:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:311:12)
    at Function.Module.runMain (module.js:457:10)
    at startup (node.js:134:18)
    at node.js:961:3
